--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,13 @@
 		<style>
 			html{
 				background-color: darkgrey;
+			}
+			h1{
 				font-family: sans-serif;
-				width: 200px;
-				height: 200px;
 			}
 		</style>
 	</head>
 	<body>
-		<h3>Rickroll Extension</h3>
+		<h1 align="center">Rickroll Extension</h1>
 	</body>
 </html>
