--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,15 @@
 		<style>
 			html{
 				background-color: darkgrey;
-			}
-			h1{
 				font-family: sans-serif;
+				width: 200px;
+				height: 200px;
 			}
 		</style>
 	</head>
 	<body>
-		<h1 align="center">Rickroll Extension</h1>
+		<h3 align="center">Rickroll Extension</h3>
+		<h3 align="center"><button id="change">Turn Off/On</button></h3>
+		<script src="popup.js"></script>
 	</body>
 </html>
