--- a/popup.html
+++ b/popup.html
@@ -8,11 +8,15 @@
 				width: 200px;
 				height: 200px;
 			}
+			#status{
+				color: red;
+			}
 		</style>
 	</head>
 	<body>
-		<h3 align="center">Rickroll Extension</h3>
-		<h3 align="center"><button id="change">Turn Off/On</button></h3>
+		<h2 align="center">Rickroll Extension</h2>
+		<h3 align="center" id="status">Extension is: </h3>
+		<h3 align="center"><button id="change">Turn off</button></h3>
 		<script src="popup.js"></script>
 	</body>
 </html>
